feat: update probe runtime plan
